# macukadam.github.io

./: Cargo.toml  index.css  index.html  macro_engine.wasm  requirements.txt
renkler/: db.sqlite3  manage.py
renkler/renkAPI/: apps.py  urls.py  views.py
renkler/renkler/: settings.py  urls.py  wsgi.py
src/: entities.rs  main.rs  manager.rs
